# AMBIENT-BD-Somnofy-Data-Download

./: .gitignore  Changelog.md  README.md  pyproject.toml  setup.py
ambient_bd_downloader/: __init__.py  generate_config.py  main.py  quality_report.py
ambient_bd_downloader/download/: data_download.py  quality_checker.py
ambient_bd_downloader/properties/: properties.py
ambient_bd_downloader/sf_api/: dom.py  somnofy.py
ambient_bd_downloader/storage/: paths_resolver.py
tests/: test_data_download.py  test_quality_checker.py  test_somnofy.py
tests/data/: 2024-12-25_RkdSRhgMGQ8XFQAA_raw.json
