[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ambient_bd_downloader"
version = "0.7.2"
description = "Download data from Somnofy devices"
readme = { content-type = "text/markdown", file = "README.md" }
requires-python = ">=3.10"
dependencies = [
        'pandas>=1.5.3',
        'requests>=2.31.0',
        'requests-oauthlib>=2.0.0',
        'tabulate>=0.9.0'
]

[project.urls]
Homepage = 'https://github.com/chronopsychiatry/AMBIENT-BD-Somnofy-Data-Download'

[project.scripts]
ambient_download = 'ambient_bd_downloader.main:main'
ambient_generate_config = 'ambient_bd_downloader.generate_config:generate_config'
ambient_quality_report = 'ambient_bd_downloader.quality_report:quality_report'

[tool.setuptools.packages.find]
where = ["."]
include = ["ambient_bd_downloader*"]
